--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,6 @@
   padding: 0;
   box-sizing: border-box;
 }
-
 :root {
   --black: #141414;
   --index: calc(1vw + 1vh);
@@ -21,7 +20,7 @@ body {
 .magic-list-iteam {
   color: var(--black);
   text-decoration: none;
-  /* cursor: none; */
+  cursor: none;
   display: block;
   line-height: 1;
   padding: calc(var(--index) * 2.3) calc(var(--index) * 5);
@@ -55,8 +54,8 @@ body {
   width: var(--width);
   height: 0;
   position: fixed;
-  top: calc(var(--width) * -.5);
-  left: calc(var(--height) * -.5);
+  top: calc(var(--width) * -.2);
+  left: calc(var(--height) * -.8);
   overflow: hidden;
   transform: translate3d(var(--move-x), var(--move-y), 0);
   transition: transform var(--transition-cursor), height 1s ease;
@@ -67,7 +66,7 @@ body {
   position: relative;
   width: calc(var(--width) * 2);
   height: calc(var(--height) * 2);
-  top: calc(var(--width) * -.25);
+  top: calc(var(--width) * -.1.8);
   left: calc(var(--height) * -.5);
   background-size: cover;
   background-position: center;
